  macrobenchmark suite.
  (Martin Pool)

New Features
************

Bug Fixes
*********

* Configuration files in ``${BZR_HOME}`` are now written in an atomic
  way which should help avoid problems with concurrent writers.
  (Vincent Ladeuil, #525571)

* Don't traceback trying to unversion children files of an already
  unversioned directory.  (Vincent Ladeuil, #494221)

* Progress bars prefer to truncate the text message rather than the
  counters.  The spinner is shown between the network transfer indicator
  and the progress message.  (Martin Pool)

* Recursive binding for checkouts is now detected by bzr. A clear error
  message is shown to the user. (Parth Malwankar, #405192)

Improvements
************

Documentation
*************

* ``bzr help patterns`` now explains case insensitive patterns and
  points to Python regular expression documentation.
  (Parth Malwankar, #594386)

API Changes
***********

* Delete ``ProgressTask.note``, which was deprecated in 2.1.

Internals
*********

Testing
*******

* Unit test added to ensure that "message" is not uses as a format variable
  name in BzrError subclasses as this conflicts with some Python versions.
  (Parth Malwankar, #603461)

bzr 2.2b4
#########

:Codename: Monkey Magic
:2.2b4: 2004-07-09


This fourth and final beta in the 2.2 series now stabilizes the internal
APIs. Plugin authors are recommended to ensure their releases are
compatible, so that 2.2rc1 can be a true release candidate, containing
stable and compatible plugin versions. 

For users of bzrlib as a library, one of the primary changes is to request
that they call ``bzrlib.initialize`` and use the returned context manager
appropriately.

Better interaction with ``bzr-loom`` to make sure branching from a loom
even over a smart server still yields a local loom. Not to mention lots of
bugfixes over 2.2b3.

Compatibility Breaks
********************

* bzrlib library users now need to call ``__enter__`` and ``__exit__`` on